--- a/jenkinsfile
+++ b/jenkinsfile
@@ -22,7 +22,7 @@ pipeline {
 		stage('SonarQube Analysis') {
 			steps {
 				script {
-					withSonarQubeEnv() {
+					withSonarQubeEnv('SonarQube') {
 						def scannerHome = 'MSBuild SonarScanner'
 						sh "dotnet ${scannerHome}/SonarScanner.MSBuild.dll begin /k:\"jasonvandebeek_SolveChess-Auth-API_AYvoPvqhxO9MFOdCobMh\""
 						sh "dotnet build"
