--- a/jenkinsfile
+++ b/jenkinsfile
@@ -21,8 +21,8 @@ pipeline {
 		}
 		stage('SonarQube Analysis') {
 			steps {
+				def scannerHome = tool 'SonarScanner for MSBuild'
 				withSonarQubeEnv('SonarQube') {
-					def scannerHome = 'MSBuild SonarScanner'
 					sh "dotnet ${scannerHome}/SonarScanner.MSBuild.dll begin /k:\"jasonvandebeek_SolveChess-Auth-API_AYvoPvqhxO9MFOdCobMh\""
 					sh "dotnet build"
 					sh "dotnet ${scannerHome}/SonarScanner.MSBuild.dll end"
