--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,6 +6,16 @@ pipeline {
 		scannerHome = tool 'SonarScanner for MSBuild'		
     }
     stages {
+		stage('SonarQube Analysis') {
+			steps {
+				withSonarQubeEnv('SonarQube') {
+					sh "dotnet ${scannerHome}/SonarScanner.MSBuild.dll begin /k:\"jasonvandebeek_SolveChess-Auth-API_AYvoPvqhxO9MFOdCobMh\" /d:sonar.cs.vscoveragexml.reportsPaths=coverage.xml"
+					sh "dotnet build --no-incremental"
+					sh "dotnet-coverage collect 'dotnet test' -f xml  -o 'coverage.xml'"
+					sh "dotnet ${scannerHome}/SonarScanner.MSBuild.dll end"
+				}
+			}
+		}
         stage('Build .NET Application') {
             steps {
                 script {
@@ -18,16 +28,6 @@ pipeline {
 			steps {
 				script {
 					sh "dotnet test"
-				}
-			}
-		}
-		stage('SonarQube Analysis') {
-			steps {
-				withSonarQubeEnv('SonarQube') {
-					sh "dotnet ${scannerHome}/SonarScanner.MSBuild.dll begin /k:\"jasonvandebeek_SolveChess-Auth-API_AYvoPvqhxO9MFOdCobMh\""
-					sh "dotnet build"
-					sh "dotnet-coverage collect 'dotnet test' -f xml  -o 'coverage.xml'"
-					sh "dotnet ${scannerHome}/SonarScanner.MSBuild.dll end"
 				}
 			}
 		}
