--- a/jenkinsfile
+++ b/jenkinsfile
@@ -11,7 +11,7 @@ pipeline {
 				withSonarQubeEnv('SonarQube') {
 					sh "dotnet ${scannerHome}/SonarScanner.MSBuild.dll begin /k:\"jasonvandebeek_SolveChess-Auth-API_AYvoPvqhxO9MFOdCobMh\" /d:sonar.cs.vscoveragexml.reportsPaths=coverage.xml"
 					sh "dotnet build --no-incremental"
-					sh "dotnet-coverage collect 'dotnet test' -f xml  -o 'coverage.xml'"
+					sh "/var/lib/jenkins/.dotnet/tools/dotnet-coverage collect 'dotnet test' -f xml  -o 'coverage.xml'"
 					sh "dotnet ${scannerHome}/SonarScanner.MSBuild.dll end"
 				}
 			}
@@ -19,6 +19,7 @@ pipeline {
         stage('Build .NET Application') {
             steps {
                 script {
+					sh "dotnet clean"
 					sh "dotnet restore"
                     sh "dotnet build"
                 }
