--- a/API/API.csproj
+++ b/API/API.csproj
@@ -1,4 +1,4 @@
-  <Project Sdk="Microsoft.NET.Sdk.Web">
+﻿  <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -23,5 +23,9 @@
     <ProjectReference Include="..\DAL\DAL.csproj" />
     <ProjectReference Include="..\Logic\Logic.csproj" />
   </ItemGroup>
+
+    <ItemGroup>
+      <InternalsVisibleTo Include="IntegrationTests"/>
+    </ItemGroup>
 
 </Project>
