--- a/jenkinsfile
+++ b/jenkinsfile
@@ -53,7 +53,7 @@ pipeline {
 		stage('Build Docker Image') {
 			steps {
 				script {
-					dockerImage = docker.build "${dockerRegistry}:${BUILD_NUMBER}"
+					dockerImage = docker.build "${dockerRegistry}:latest"
 				}
 			}
 		}
