--- a/jenkinsfile
+++ b/jenkinsfile
@@ -68,7 +68,7 @@ pipeline {
         }
         stage('Cleaning up') {
             steps {
-                sh "docker rmi ${dockerRegistry}:${BUILD_NUMBER}"
+                sh "docker rmi ${dockerRegistry}:latest"
             }
         }
     }
